--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,5 @@ sysinfo.txt
 
 .idea/Actividad-Integradora-1_Sistemas-Multiagentes-con-GC.iml
 .idea/misc.xml
+/.idea
 Python-Mesa/__pycache__/robot_model.cpython-310.pyc
