--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ sysinfo.txt
 
 .idea/Actividad-Integradora-1_Sistemas-Multiagentes-con-GC.iml
 .idea/misc.xml
-/.idea
+.idea/
 Python-Mesa/__pycache__/robot_model.cpython-310.pyc
